--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
   }
 }
 
+
 .icon-square {
   width: 3rem;
   height: 3rem;
@@ -26,3 +27,10 @@
   height: 100px;
   border-radius: 50%;
 }
+
+.image{
+  height: 30px;
+  width: 250px;
+}
+
+
